--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "antd": "^5.17.3",
+    "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
+    "i18next": "^23.11.5",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-circle-flags": "^0.0.20",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.1",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.2",
+    "sweetalert2": "^11.11.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
