--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react": "^18.3.1",
     "react-circle-flags": "^0.0.20",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.4",
     "react-i18next": "^14.1.1",
     "react-icons": "^5.2.1",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.2",
     "sweetalert2": "^11.11.0",
+    "swiper": "^11.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
