--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,3 @@
-REACT_APP_API_BASE_URL = "https://webh5-api.danger.asia/api"
+# REACT_APP_API_BASE_URL = "https://webh5-api.danger.asia/api"
+
+REACT_APP_API_BASE_URL = "https://ui-api.bmw77club.com/api"
