--- a/.env.production
+++ b/.env.production
@@ -3,4 +3,4 @@
 # REACT_APP_API_BASE_URL = "https://webh5-api.danger.asia/api"
 # REACT_APP_API_BASE_URL = "https://ui-api.bmw77club.com/api"
 
-REACT_APP_API_BASE_URL = "https://galaxy0001-ui-api-test.myboss228.live/api"
+REACT_APP_API_BASE_URL = "https://api.myboss68.com/api"
