--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
-REACT_APP_API_BASE_URL = "http://localhost:5004/api"
+# EACT_APP_API_BASE_URL = "http://localhost:5004/api"
 
 # REACT_APP_API_BASE_URL = "https://webh5-api.danger.asia/api"
 # REACT_APP_API_BASE_URL = "https://ui-api.bmw77club.com/api"
 
-# REACT_APP_API_BASE_URL = "https://api.myboss68.com/api"
+REACT_APP_API_BASE_URL = "https://api-test.myboss68.com/api"
