--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
-# REACT_APP_API_BASE_URL = "http://localhost:5004/api"
+REACT_APP_API_BASE_URL = "https://localhost:44392/api"
 # REACT_APP_API_BASE_URL = "https://gpsystem-api.danger.asia/api"
 # REACT_APP_API_BASE_URL = "https://webh5-api.danger.asia/api"
 
 # REACT_APP_API_BASE_URL = "https://ui-api.bmw77club.com/api"
 
-REACT_APP_API_BASE_URL = "https://api-test.myboss68.com/api"
+# REACT_APP_API_BASE_URL = "https://api-test.myboss68.com/api"
