--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@
 
 # REACT_APP_API_BASE_URL = "https://ui-api.bmw77club.com/api"
 
-REACT_APP_API_BASE_URL = "https://api-test.myboss68.com/api"
+REACT_APP_API_BASE_URL = "https://api.myboss68.com/api"
